# aldiscore

./: .gitignore  README.md  copy_files.py  environment.yaml  environment.yml  main.py  pyproject.toml  setup.py  splits_params.pkl
aldiscore/: __init__.py  config.yaml  main.py
aldiscore/configs/: config.yaml
aldiscore/constants/: constants.py
aldiscore/datastructures/: alignment.py  dataset.py  ensemble.py  utils.py
aldiscore/enums/: enums.py
aldiscore/models/: v1.0.txt
aldiscore/prediction/: config.yaml  extractor.py  features.py  predictor.py  utils.py
aldiscore/prediction/models/: v0.0.txt
aldiscore/scoring/: confusion.py  encoding.py  features.md  multi.py  pairwise.py  pythia.py  set_based.py  utils.py
aldiscore/utils/: dataloading.py  general.py  path.py  plots.py  prediction.py
configs/: config.yaml
demo/: demo.ipynb
demo/data/: protein.0.fasta
notebooks/: ablation_sources.ipynb  baliphy_phylo_check.ipynb  blosum_matrix.ipynb  data_exploration.ipynb  delete_rule_files.ipynb  demo.ipynb  dist_metric_prototyping.ipynb  distance_mds.ipynb  ensemble_uncertainty.ipynb  feature_dev.ipynb  feature_engineering.ipynb  label_generation.ipynb  metal_deviation_test.ipynb  performance_check.ipynb  prediction_dev.ipynb  reference_comparison.ipynb  treebase_analysis.ipynb  treebase_prediction.ipynb
notebooks/data/: aa.fasta  dna.fasta
notebooks/misc/: feature_dev.ipynb  feature_importance.ipynb  kde_plot.ipynb  lucia_notebook.ipynb  prediction_dev.ipynb  runtime_extractor.ipynb  runtime_overall.ipynb  runtime_results.ipynb
notebooks/studies/: ablation_bali3_ref.ipynb  ablation_size.ipynb  ablation_sources.ipynb  feature_importance.ipynb  runtime_results.ipynb
scripts/: compute_features.py  report_performance.py  report_performance_lucia.py  runtime_sample.py  train_final_model.py  tune_hyperparams.py
tests/: test_all.py  test_metric.py
tests/data/: protein.1.fasta  protein.2.fasta  protein.3.fasta  sequences.fasta
