[project]
name = "aldiscore"
description = "Python library for computing and predicting uncertainty in multiple sequence alignments."
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["msa", "alignment", "uncertainty", "prediction"]
authors = [{name = "Mattis Bodynek", email = "mattisbodynek@gmail.com"}]
version = "1.0.0"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">= 3.8"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "biopython",
    "lightgbm",
    "matplotlib",
    "rich_argparse",
    "parasail",
    "pyyaml",
]

[project.optional-dependencies]
misc = [
    "plotly",
    "tqdm"
]

[project.urls]
Repository = "https://github.com/MaBody/aldiscore.git"

[project.scripts]
aldiscore = "aldiscore.main:main"

[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"aldiscore" = "aldiscore"}
package-data = {"aldiscore" = ["configs/**", "models/**"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["aldiscore*"]
exclude = [
    "scripts*",
    "tests*", 
    "notebooks*",
    "demo*",
    "figures*",
    "logs*",
    "optuna*",
    "__pycache__*",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "*.so",
    "*.egg",
    "*.egg-info"
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]
